server and client separate

--- a/.gitignore
+++ b/.gitignore
@@ -1,10 +1,40 @@
-node_modules
-dist
+# Dependencies
+node_modules/
+client/node_modules/
+server/node_modules/
+
+# Build outputs
+dist/
+client/dist/
+server/dist/
+
+# Environment files
+.env
+.env.local
+.env.*.local
+client/.env
+server/.env
+
+# OS files
 .DS_Store
-server/public
-vite.config.ts.*
+
+# IDE
+.idea/
+*.swp
+*.swo
+
+# Logs
+*.log
+npm-debug.log*
+
+# Misc
 *.tar.gz
-.replit
 .local/
+
+# Replit
+.replit
 replit.nix
 replit.toml
+
+# Vite
+vite.config.ts.*
