--- a/client/components.json
+++ b/client/components.json
@@ -5,7 +5,7 @@
     "tsx": true,
     "tailwind": {
       "config": "tailwind.config.ts",
-      "css": "client/src/index.css",
+      "css": "src/index.css",
       "baseColor": "neutral",
       "cssVariables": true,
       "prefix": ""
@@ -18,3 +18,4 @@
       "hooks": "@/hooks"
     }
 }
+
